--- a/ansible/support/tasks/ignition.yml
+++ b/ansible/support/tasks/ignition.yml
@@ -36,6 +36,10 @@
         headers:
           "Accept": "application/vnd.coreos.ignition+json;version=3.2.0"
       ignore_errors: true
+      register: result
+      retries: 120
+      delay: 10
+      until: '"Request failed: <urlopen error timed out>" not in result.msg'
 
     - name: Downloading the ignition file using a https_proxy
       get_url:
