--- a/ansible/post/tasks/main.yml
+++ b/ansible/post/tasks/main.yml
@@ -3,6 +3,12 @@
   hosts: all
 
   tasks:
+  - name: Install needed packages
+    package:
+      name:
+      - python3-pip
+      state: present
+
   - name: Install Pre-requisites
     pip:
       name:
