--- a/ansible/support/templates/nfs-sc.yml
+++ b/ansible/support/templates/nfs-sc.yml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: nfs-storage
+  name: {{ "auto-nfs-storage" if cicd|lower == "true" else "nfs-storage" }}
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: k8s-sigs.io/nfs-subdir-external-provisioner
