--- a/ansible/support/vars/vars.yaml
+++ b/ansible/support/vars/vars.yaml
@@ -4,6 +4,7 @@ openshift_machine_config_url: "https://<HOSTNAME>:22623/config/worker"
 vpc_support_machine: "<IP>"
 ports:
 - 67/udp
+- 68/udp
 - 53/tcp
 - 53/udp
 - 8080/tcp
