--- a/ansible/support/vars/vars.yaml
+++ b/ansible/support/vars/vars.yaml
@@ -1,5 +1,5 @@
 ---
-ocp_client: "https://mirror.openshift.com/pub/openshift-v4/multi/clients/ocp-dev-preview/4.14.0-ec.3/ppc64le/openshift-client-linux.tar.gz"
+ocp_client: "https://mirror.openshift.com/pub/openshift-v4/multi/clients/ocp/stable/ppc64le/openshift-client-linux.tar.gz"
 openshift_machine_config_url: "https://<HOSTNAME>:22623/config/worker"
 vpc_support_machine: "<IP>"
 ports:
