OpenShiftP-347: refactor dnsmasq into ansible
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/ansible/support/tasks/main.yml
+++ b/ansible/support/tasks/main.yml
@@ -28,6 +28,7 @@
       - python3-pip
       - nfs-utils
       - git
+      - dnsmasq
       state: present
 
   - name: Install OpenShift Pre-requisites
@@ -66,6 +67,12 @@
     run_once: true
     with_items:
       - "{{ ports }}"
+
+  - name: Start dnsmasq service
+    systemd:
+      name: dnsmasq
+      state: started
+      enabled: yes
 
   - name: Systemd daemon reload
     systemd:
