--- a/ansible/support/tasks/ignition.yml
+++ b/ansible/support/tasks/ignition.yml
@@ -46,16 +46,37 @@
       delay: 10
       until: '"Request failed: <urlopen error timed out>" not in result.msg'
 
+    - name: Print return information from the previous task
+      ansible.builtin.debug:
+        var: result
+        verbosity: 1
+
+    - name: Check for IPs the Ignition file via IP
+      ansible.builtin.shell: "oc get nodes -l node-role.kubernetes.io/control-plane -owide --no-headers"
+      register: check_result_by_ip
+      ignore_errors: true
+      when: result.status == -1
+
+    - name: Print return information from the previous task check_result_by_ip
+      ansible.builtin.debug:
+        var: check_result_by_ip
+        verbosity: 1
+
     - name: Download the Ignition file via IP
       ansible.builtin.shell: "oc get nodes -l node-role.kubernetes.io/control-plane -owide --no-headers | awk '{print $6}' | head -n1 | xargs -I xyz curl -k https://xyz:22623/config/worker -H 'Accept: application/vnd.coreos.ignition+json;version=3.2.0' -v -o /var/www/html/ignition/worker.ign"
-      register: result_by_ip
+      register: download_result_by_ip
       ignore_errors: true
-      when: result.rc != 0
+      when: check_result_by_ip.rc == 0
+
+    - name: Print return information from the previous task download_result_by_ip
+      ansible.builtin.debug:
+        var: download_result_by_ip
+        verbosity: 1
 
     - name: Download the Ignition file via oc
       ansible.builtin.shell: "oc extract -n openshift-machine-api secret/master-user-data --keys=userData --to=- > /var/www/html/ignition/worker.ign"
       ignore_errors: true
-      when: result.rc != 0 and result_by_ip.rc != 0
+      when: (result.status == -1 or result.rc != 0) and (check_result_by_ip.rc != 0 or download_result_by_ip.status == -1 or download_result_by_ip.rc != 0 )
 
     - name: Verify the ignition file exists
       ansible.builtin.shell: stat /var/www/html/ignition/worker.ign
